tests/evaluator/should_pass/timed_csp_2.csp
channel c : {0,1}
channel tock

OneStep(_) = 1

Timed (OneStep) {
    P(x) = c.x -> STOP

    Ps = P(0) ||| P(1)    
}

procTest1 = Ps
