tests/evaluator/should_fail/internal_choice.csp
channel c : {0..1}

P = c$x : {} -> STOP

procTest1 = P
